maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:10: error: '=' expected but ',' found.
def trouverBiscuit():Int,Int = {
                        ^ShortestPathMaze:16: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^