maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis,yBis = trouverBiscuit()
  
    // Your code here
}

def trouverBiscuit():Int,Int = {
  return 1,2
}